[gd_scene load_steps=3 format=3 uid="uid://ks5hyrq6x4v1"]

[ext_resource type="Script" path="res://scripts/misc/area_of_sight.gd" id="1_je0ql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1y4v"]

[node name="AreaOfSight" type="Area2D"]
script = ExtResource("1_je0ql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t1y4v")
debug_color = Color(0.88533, 0.250759, 0.55489, 0.42)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
